--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
     "angular-smart-table": "^2.1.8",
     "angular-ui-bootstrap": "^2.5.6",
     "blob": "0.0.4",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "3.4.1",
     "chart.js": "2.7.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-stacked100": "^0.4.6",
-    "d2": "^29.1.5",
+    "d2": "^30",
     "d2-ui": "^29.0.29",
     "d2-utilizr": "^0.2.16",
     "file-saver": "^1.3.3",
+    "fontawesome": "^5.6.3",
     "i18next": "^10.0.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.19.3",
     "ng-i18next": "^1.0.5",
     "proptypes": "^1.1.0",
     "regression": "^2.0.0",
     "rxjs": "^5.5.12",
+    "typeface-roboto": "^0.0.54",
     "ui-select": "^0.19.8"
   },
   "devDependencies": {
